force-app/main/default/objects/Competitor_Price__c/Competitor_Price__c.object-meta.xml
<CustomObject>
    <description>Competitor Prices 
Precio_Competencia__c was the object in Vidralla</description>
    <label>Competitor Price</label>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Competitor Prices</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Prices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>