force-app/main/default/objects/Competitor_Price__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Associated Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts Competitor Prices</relationshipLabel>
    <relationshipName>Competitor_Prices1</relationshipName>
    <type>Lookup</type>
</CustomField>