force-app/main/default/objects/Competitor_Price__c/fields/Account_Market__c.field-meta.xml
<CustomField>
    <fullName>Account_Market__c</fullName>
    <description>Pulls the Competitor Market field from the Account</description>
    <formula>TEXT(  Competitor__r.Market__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulls the Competitor Market field from the Account</inlineHelpText>
    <label>Competitor Account Market</label>
    <type>Text</type>
</CustomField>