force-app/main/default/objects/Competitor_Price__c/fields/C_digo_de_producto__c.field-meta.xml
<CustomField>
    <fullName>C_digo_de_producto__c</fullName>
    <formula>Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código de producto</label>
    <type>Text</type>
</CustomField>