force-app/main/default/objects/Competitor_Price__c/fields/Gross_Price_1000__c.field-meta.xml
<CustomField>
    <fullName>Gross_Price_1000__c</fullName>
    <description>Gross Price €/1000
Precio Bruto €/1000</description>
    <label>Gross Price €/1000</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>