force-app/main/default/objects/Competitor_Price__c/fields/Net_Price_1000__c.field-meta.xml
<CustomField>
    <fullName>Net_Price_1000__c</fullName>
    <formula>IF( Discount__c =0, Gross_Price_1000__c, Gross_Price_1000__c  -( Gross_Price_1000__c /(1/  Discount__c  )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Este precio se calcula en automático, teniendo en cuenta el precio bruto indicado más el descuento (en caso de tenerlo). En Euros/1000 bot.</inlineHelpText>
    <label>Net Price €/1000</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>