force-app/main/default/objects/Competitor_Price__c/fields/Net_Price_ton__c.field-meta.xml
<CustomField>
    <fullName>Net_Price_ton__c</fullName>
    <formula>(Net_Price_1000__c /   Product__r.Weight__c   )*1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Este precio se calcula en automático, teniendo en cuenta el precio neto indicado y el peso del modelo registrado</inlineHelpText>
    <label>Net Price €/ton</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>