force-app/main/default/objects/Competitor_Price__c/fields/OBSERVACIONES__c.field-meta.xml
<CustomField>
    <fullName>OBSERVACIONES__c</fullName>
    <description>Comentarios adicionales</description>
    <label>OBSERVACIONES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>