force-app/main/default/objects/Competitor_Price__c/fields/Precio_bruto_ton__c.field-meta.xml
<CustomField>
    <fullName>Precio_bruto_ton__c</fullName>
    <formula>(Gross_Price_1000__c / Product__r.Weight__c )*1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Este campo se completa en automático teniendo en cuenta el precio bruto indicado  y el peso del modelo registrado</inlineHelpText>
    <label>Precio bruto €/ton</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>