force-app/main/default/objects/Competitor_Price__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products Competitor Prices</relationshipLabel>
    <relationshipName>Competitor_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>