force-app/main/default/objects/Competitor_Price__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <formula>Competitor__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitor Account Province</label>
    <type>Text</type>
</CustomField>