force-app/main/default/objects/Competitor_Price__c/fields/Province_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Province_Picklist__c</fullName>
    <label>Province</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Market__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALAVA</fullName>
            </value>
            <value>
                <fullName>ALBACETE</fullName>
            </value>
            <value>
                <fullName>ALICANTE</fullName>
            </value>
            <value>
                <fullName>ALMERIA</fullName>
            </value>
            <value>
                <fullName>AVILA</fullName>
            </value>
            <value>
                <fullName>BADAJOZ</fullName>
            </value>
            <value>
                <fullName>BALEARES</fullName>
            </value>
            <value>
                <fullName>BARCELONA</fullName>
            </value>
            <value>
                <fullName>BURGOS</fullName>
            </value>
            <value>
                <fullName>CACERES</fullName>
            </value>
            <value>
                <fullName>CADIZ</fullName>
            </value>
            <value>
                <fullName>CASTELLON</fullName>
            </value>
            <value>
                <fullName>CIUDAD REAL</fullName>
            </value>
            <value>
                <fullName>CORDOBA</fullName>
            </value>
            <value>
                <fullName>LA CORUÑA</fullName>
            </value>
            <value>
                <fullName>CUENCA</fullName>
            </value>
            <value>
                <fullName>GERONA</fullName>
            </value>
            <value>
                <fullName>GRANADA</fullName>
            </value>
            <value>
                <fullName>GUADALAJARA</fullName>
            </value>
            <value>
                <fullName>GUIPUZCOA</fullName>
            </value>
            <value>
                <fullName>HUELVA</fullName>
            </value>
            <value>
                <fullName>HUESCA</fullName>
            </value>
            <value>
                <fullName>JAEN</fullName>
            </value>
            <value>
                <fullName>LEON</fullName>
            </value>
            <value>
                <fullName>LERIDA</fullName>
            </value>
            <value>
                <fullName>LA RIOJA</fullName>
            </value>
            <value>
                <fullName>LUGO</fullName>
            </value>
            <value>
                <fullName>MADRID</fullName>
            </value>
            <value>
                <fullName>MALAGA</fullName>
            </value>
            <value>
                <fullName>MURCIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>