force-app/main/default/objects/Competitor_Price__c/fields/Source_of_info__c.field-meta.xml
<CustomField>
    <fullName>Source_of_info__c</fullName>
    <description>Aitor provided the information for this field</description>
    <label>Source of info</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facilitado por el cliente (Provided by customer)</fullName>
            </value>
            <value>
                <fullName>Estimación interna (Own estimation)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>