force-app/main/default/objects/Competitor_Price__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <label>Units</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>