force-app/main/default/objects/Competitor_Price__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Competitor__c</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Source_of_info__c</columns>
    <columns>Gross_Price_1000__c</columns>
    <columns>Net_Price_1000__c</columns>
    <columns>Net_Price_ton__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Province__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>