force-app/main/default/objects/Competitor_Price__c/listViews/Prices_By_Region.listView-meta.xml
<ListView>
    <fullName>Prices_By_Region</fullName>
    <columns>Account_Market__c</columns>
    <columns>Province__c</columns>
    <columns>NAME</columns>
    <columns>Competitor__c</columns>
    <columns>Account__c</columns>
    <columns>Discount__c</columns>
    <columns>Gross_Price_1000__c</columns>
    <columns>Net_Price_1000__c</columns>
    <columns>Net_Price_ton__c</columns>
    <columns>Product__c</columns>
    <columns>Source_of_info__c</columns>
    <columns>Units__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Market__c</field>
        <operation>equals</operation>
        <value>ES</value>
    </filters>
    <label>Prices By Region</label>
</ListView>